(Jvm) Added SgAsmJvmField, SgAsmJvmFieldList, and SgAsmJvmFieldTable
JVM-1

--- a/src/frontend/BinaryFormats/CMakeLists.txt
+++ b/src/frontend/BinaryFormats/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(roseBinaryFormats OBJECT
   JvmClassFile.C
   JvmAttribute.C
   JvmConstantPool.C
+  JvmField.C
   JvmFileHeader.C
   JvmMethod.C
 
