(Rose::) Started on Rose::CodeGen
 * it will replace/reimplement some/most function from MFB
 * keeping only functionality used extensively
 * formatting of Rose::AST and Rose::CodeGen to follow Rose:: conventions

RC-1307

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -151,6 +151,7 @@ set(rose_LIB_SRCS
   $<TARGET_OBJECTS:roseFileSystem>
   $<TARGET_OBJECTS:roseStringUtility>
   $<TARGET_OBJECTS:RoseAST>
+  $<TARGET_OBJECTS:RoseCodeGen>
   $<TARGET_OBJECTS:mstl>)
 
 if(enable-java)
