--- a/src/Rose/AST/CMakeLists.txt
+++ b/src/Rose/AST/CMakeLists.txt
@@ -10,6 +10,8 @@ add_dependencies(RoseAST rosetta_generated)
 
 ########### install files ###############
 
+install(FILES ../AST.h DESTINATION ${INCLUDE_INSTALL_DIR}/Rose)
+
 install(FILES
-  cmdline.h io.h checker.h defect.h utils.h
+  cmdline.h IO.h Checker.h Defect.h Utils.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose/AST)
