--- a/src/Rose/AST/Makefile.am
+++ b/src/Rose/AST/Makefile.am
@@ -12,8 +12,12 @@ libRoseAST_la_SOURCES = \
   utils/edge_ptr_repl.C
 libRoseAST_la_LIBADD = 
 
+libRoseAST_la_public_includedir = $(prefix)/include/Rose
+libRoseAST_la_public_include_HEADERS = ../AST.h
+
 libRoseAST_la_includedir = $(prefix)/include/Rose/AST
-libRoseAST_la_include_HEADERS = cmdline.h io.h checker.h defect.h utils.h
+libRoseAST_la_include_HEADERS = cmdline.h IO.h Checker.h Defect.h Utils.h
+
 
 EXTRA_DIST = CMakeLists.txt
 
