(codethorn) refined dead code tests
* added NODC001, NODC002
* extended evaluation script to also test for no-dead-code

CODETHORN-70

--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -915,7 +915,10 @@ check-commandline-options: ./codethorn
 #	@dot -Tpdf transitiongraph1.dot -otransitiongraph1.pdf
 
 check-dead-code:
-	$(srcdir)/scripts/runDeadCodeTests $(srcdir)/tests
+	$(srcdir)/scripts/runDeadCodeTests $(srcdir)/tests --dc
+
+check-no-dead-code:
+	$(srcdir)/scripts/runDeadCodeTests $(srcdir)/tests --no-dc
 
 check-no-cc:
 	$(srcdir)/scripts/runNoConstantConditionTests $(srcdir)/tests
