(Ada) revise operator representation
- added operators to fictitious defined in the frontend

- updated rule for generating scope qualification out of the Asis to
  ROSE converter.
  if the left-side is a reference to a function declaration, the
  scope-qual is elided, b/c we have the scope from the declaration.

- added support for NullConstraints to distinguish between
  derived types and sub types that were not constrained.
  - this new node should only appear under a subtype for which a
    name is declared. Otherwise, the subtypes w/ null-constraints
    are pruned.

- updated flatten array function in SageInterface::ada

- revised Ada attribute representation:
  - added type information for many attributes
  - revised representation of attribute calls:
    some attributes were represented following the Asis representation:
    Integer'Min(a,b)
      was SgFunctionCallExp(SgAdaAttributeExp("Min", ()), (a, b))
      now SgAttributeExp("Min", (a, b))
    The change was necessary to compute type information that was
    argument dependent.

- namequalification: support for traversing non-shared AST nodes
  that are not reached by the standard traversal.
  i.e., arguments for SgAdaGenericInstanceDecl and
        expressions of SgAdaVariantFieldDecl.

- refined handling of labels and loops in exception handler blocks

- moved builder functions for RemOp and AbsOp to the SageBuilder.h

- added compatibility pass to revert to earlier AST representation
  (temporary to not break the C++ conversion)

- added support for SageInterface::replace_expression, for parents that
  are Ada statement nodes.

- added support for SageInterface::replace_expression, for
  SgActualArgumentExpression, b/c it did not have support.

- added test cases:
  prefixcalls.adb

RC-1144

--- a/tests/nonsmoke/functional/CompileTests/experimental_ada_tests/compile_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_ada_tests/compile_tests/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 
 # DQ (8/23/2017): Use command line option to alternatively test the experimental fortran frontend.
 # ROSE_FLAGS = -rose:verbose 0 -I$(srcdir)
-ROSE_FLAGS    ?= -rose:skipfinalCompileStep -rose:ada:fail_hard_adb
+ROSE_FLAGS    ?= -rose:skipfinalCompileStep -rose:ada:fail_hard_adb -rose:ada:warn
 
 
 # ROSE_COMPILER ?= $(abs_top_builddir)/src/rose-compiler
