(codethorn) added tests for memory version checks
* added NP tests
* added DC tests
* added scripts and ensured they can all be run in parallel

CODETHORN-70

--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -719,7 +719,7 @@ check-matcher:
 	./matcher_demo  --edg:no_warnings $(srcdir)/tests/basictest5.C < $(srcdir)/tests/matchexpressions/test1.mat
 
 
-CHECK_DEFAULT_PASSING=check-codethorn-internal check-no-cc check-domain-regression check-domain-l3 check-domain-l2basic check-expr-eval check-normalization check-line-col check-io check-omp-cfg check-commandline-options check-vis check-thorn2 check-stg check-thorn4
+CHECK_DEFAULT_PASSING=check-codethorn-internal check-violations check-domain-regression check-domain-l3 check-domain-l2basic check-expr-eval check-normalization check-line-col check-io check-omp-cfg check-commandline-options check-vis check-thorn2 check-stg check-thorn4
 CHECK_DEFAULT_FAILING=check-data-races check-deadcode
 
 CHECK_WITH_SPOT_PASSING=check-reachability-seq check-ltl-seq check-ltl-par
@@ -914,6 +914,10 @@ check-commandline-options: ./codethorn
 	@./codethorn --cl-args="a bbb cc" $(srcdir)/tests/commandlineoptions1.C --vis --tg1-memory-subgraphs
 #	@dot -Tpdf transitiongraph1.dot -otransitiongraph1.pdf
 
+check-violations: check-dead-code check-no-cc check-np check-no-np
+
+check-todo: check-no-dead-code
+
 check-dead-code:
 	$(srcdir)/scripts/runDeadCodeTests $(srcdir)/tests --dc
 
@@ -922,6 +926,12 @@ check-no-dead-code:
 
 check-no-cc:
 	$(srcdir)/scripts/runNoConstantConditionTests $(srcdir)/tests
+
+check-np:
+	$(srcdir)/scripts/runNPTests $(srcdir)/tests --np
+
+check-no-np:
+	$(srcdir)/scripts/runNPTests $(srcdir)/tests --no-np
 
 check-normalization:
 	$(srcdir)/scripts/runNormalizationTests $(srcdir)/tests
