--- a/projects/CodeThorn/src/Makefile.am
+++ b/projects/CodeThorn/src/Makefile.am
@@ -914,9 +914,7 @@ check-commandline-options: ./codethorn
 	@./codethorn --cl-args="a bbb cc" $(srcdir)/tests/commandlineoptions1.C --vis --tg1-memory-subgraphs
 #	@dot -Tpdf transitiongraph1.dot -otransitiongraph1.pdf
 
-check-violations: check-dead-code check-no-cc check-np check-no-np
-
-check-todo: check-no-dead-code
+check-violations: check-dead-code check-no-dead-code check-no-cc check-np check-no-np
 
 check-dead-code:
 	$(srcdir)/scripts/runDeadCodeTests $(srcdir)/tests --dc
