--- a/src/ROSETTA/src/CMakeLists.txt
+++ b/src/ROSETTA/src/CMakeLists.txt
@@ -32,6 +32,7 @@ set(CxxGrammarMetaProgram_SRCS
   poolBasedTraversal.C
   node.C
   buildAstFileIO.C
+  buildRoseTraits.C
   buildStorageClasses.C
   buildConstructorsWithoutSourcePositionInformation.C
   outputClassesAndFields.C
@@ -124,6 +125,7 @@ else()
     COMMAND ${CMAKE_COMMAND}  -E copy_directory  ${ROSE_TOP_SRC_DIR}/src/ROSETTA/Grammar ${ROSE_TOP_BINARY_DIR}/src/ROSETTA/Grammar
     # create this directory is needed since a few generated files will be put there        
     COMMAND ${CMAKE_COMMAND}  -E make_directory  ${ROSE_TOP_BINARY_DIR}/src/frontend/SageIII/astFileIO
+    COMMAND ${CMAKE_COMMAND}  -E make_directory  ${ROSE_TOP_BINARY_DIR}/src/frontend/SageIII/Rose/Traits
     # COMMAND echo  "META_EXE_LOC =  ${META_EXE_LOC} ARGS ${ROSE_TOP_BINARY_DIR}/src/frontend/SageIII/"
     # STRING(REGEX REPLACE "\\\\" "/" META_EXE_LOC ${META_EXE_LOC} )
     # COMMAND echo  "META_EXE_LOC =  ${META_EXE_LOC} ARGS ${ROSE_TOP_BINARY_DIR}/src/frontend/SageIII/"
