--- a/src/ROSETTA/src/Makefile.am
+++ b/src/ROSETTA/src/Makefile.am
@@ -100,6 +100,7 @@ $(CXX_PREPROC_CODES): CxxGrammarMetaProgram$(EXEEXT) $(GRAMMAR_SOURCE_FILES)
 #	ln -s $(top_srcdir)/src/ROSETTA/Grammar Grammar
 	@echo "Running ROSETTA to generated ROSE IR code:"
 #       Add "--verbose" if you want the old, noisy output from CxxGrammarMetaProgram
+	mkdir -p  ${top_builddir}/src/frontend/SageIII/Rose/Traits
 	$(AM_V_GEN) $(VALGRIND) ./CxxGrammarMetaProgram ${top_builddir}/src/frontend/SageIII/
 
 noinst_PROGRAMS = CxxGrammarMetaProgram
@@ -121,6 +122,7 @@ CxxGrammarMetaProgram_SOURCES = \
    poolBasedTraversal.C \
    node.C \
    buildAstFileIO.C \
+   buildRoseTraits.C \
    buildStorageClasses.C \
    buildConstructorsWithoutSourcePositionInformation.C \
    outputClassesAndFields.C \
