--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(FileSystem)
 add_subdirectory(StringUtility)
 add_subdirectory(AST)
 add_subdirectory(CodeGen)
+add_subdirectory(Traits)
 
 # needed to properly define ROSE_UTIL_API
 add_definitions(-DROSE_UTIL_EXPORTS)
