--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -4,7 +4,7 @@
 include $(top_srcdir)/config/Makefile.for.ROSE.includes.and.libs
 AUTOMAKE_OPTIONS = nostdinc subdir-objects
 
-SUBDIRS=AST CodeGen
+SUBDIRS=AST CodeGen Traits
 
 # LicenseString.h is included by CommandLine/License.C but is not installed.
 #
@@ -202,5 +202,8 @@ librose_partial_la_SOURCES =								\
 	Initialize.C									\
 	Progress.C									\
 	SourceLocation.C
+
+rose_metaprog_h_includedir = $(prefix)/include/Rose
+rose_metaprog_h_include_HEADERS = metaprog.h
 
 # Public header files are installed from parent makefiles.
