(Feature) Initial support for the CIL (.NET) infrastructure
  This commit is part of the first support for .NET in
ROSE.  This gets the files in place that will be modified
to support the disassembler and other related infrastructure.

- Merge from branch dquinlan/dq-ldrd2-development-test
- Added SgAsmCilInstruction and SgAsmStackExpression nodes to ROSETTA

LDRD_SI-1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -329,6 +329,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/InstructionCache.h						\
 	Rose/BinaryAnalysis/InstructionEnumsAarch32.h					\
 	Rose/BinaryAnalysis/InstructionEnumsAarch64.h					\
+	Rose/BinaryAnalysis/InstructionEnumsCil.h					\
 	Rose/BinaryAnalysis/InstructionEnumsJvm.h					\
 	Rose/BinaryAnalysis/InstructionEnumsM68k.h					\
 	Rose/BinaryAnalysis/InstructionEnumsMips.h					\
