(Binary Analysis) Avoid running LLVM transcoder test for v13
* LLVM commands changed for LLVM 13 and later, so avoid running
  the llvmTranscoder test then since it fails.

RPM-150

--- a/tests/nonsmoke/functional/BinaryAnalysis/llvmTranscoder.conf
+++ b/tests/nonsmoke/functional/BinaryAnalysis/llvmTranscoder.conf
@@ -7,4 +7,6 @@ title = ${TITLE}
 cmd = ${VALGRIND} ${blddir}/llvmTranscoder --llvm=${LLVM_VERSION} ${SPECIMEN} > specimen.ll
 cmd = wc -l specimen.ll
 cmd = if llvm-as --version; then llvm-as specimen.ll; else true; fi
-cmd = if opt --version; then opt -analyze -lint specimen.bc; else true; fi
+cmd = echo "LLVM_VERSION = ${LLVM_VERSION}"
+cmd = echo "LLVM_VERSION_MAJOR = $(echo "${LLVM_VERSION}" |cut -d. -f1)"
+cmd = if [ "$(echo "${LLVM_VERSION}" |cut -d. -f1)" -lt 13 ] && opt --version; then opt -analyze -lint specimen.bc; else true; fi
