(Support) Changed all YAML configuration symbols to YAMLCPP
* This is to make room for support other YAML APIs.

* CPP macros changed:
    ROSE_HAVE_LIBYAML        -> ROSE_HAVE_YAMLCPP (also drops "LIB" from the name)

* Autoconf/Makefile names changed:
    ROSE_SUPPORT_YAML        -> ROSE_SUPPORT_YAMLCPP
    ROSE_YAML_PREFIX         -> ROSE_YAMLCPP_PREFIX
    ROSE_YAML_INCLUDES       -> ROSE_YAMLCPP_INCLUDES
    ROSE_YAML_LIBS           -> ROSE_YAMLCPP_LIBS
    ROSE_YAML_LIBS_WITH_PATH -> ROSE_YAMLCPP_LIBS_WITH_PATH

RPM-153

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -658,7 +658,7 @@ rose_config_installed_cppflags =		\
 	$(ROSE_PHP_INCLUDES)			\
 	$(ROSE_YICES_INCLUDES)			\
 	$(ROSE_Z3_INCLUDES)			\
-	$(ROSE_YAML_INCLUDES)			\
+	$(ROSE_YAMLCPP_INCLUDES)		\
 	$(ROSE_LIBMAGIC_INCLUDES)		\
 	$(ROSE_ELF_INCLUDES)			\
 	$(ROSE_DWARF_INCLUDES)			\
@@ -700,7 +700,7 @@ rose_config_installed_ldflags =			\
 	$(ROSE_ATERM_LIBS)			\
 	$(ROSE_FLANG_LIBS)			\
 	$(ROSE_COBOL_PT_LIBS_WITH_PATH)         \
-	$(ROSE_YAML_LIBS_WITH_PATH)		\
+	$(ROSE_YAMLCPP_LIBS_WITH_PATH)		\
 	$(ROSE_LIBMAGIC_LIBS_WITH_PATH)		\
 	$(ROSE_DLIB_LIBS_WITH_PATH)		\
 	$(ROSE_GCRYPT_LIBS_WITH_PATH)		\
