--- a/config/Makefile.for.ROSE.includes.and.libs
+++ b/config/Makefile.for.ROSE.includes.and.libs
@@ -110,10 +110,10 @@ if ROSE_HAVE_LIBYICES
 endif
 
 # YAML-CPP package for parsing YAML/JSON files
-if ROSE_HAVE_LIBYAML
-  ROSE_YAML_INCLUDES = -I@ROSE_YAML_PREFIX@/include
-  ROSE_YAML_LIBS = -lyaml-cpp
-  ROSE_YAML_LIBS_WITH_PATH = -L@ROSE_YAML_PREFIX@/lib -lyaml-cpp
+if ROSE_HAVE_YAMLCPP
+  ROSE_YAMLCPP_INCLUDES = -I@ROSE_YAMLCPP_PREFIX@/include
+  ROSE_YAMLCPP_LIBS = -lyaml-cpp
+  ROSE_YAMLCPP_LIBS_WITH_PATH = -L@ROSE_YAMLCPP_PREFIX@/lib -lyaml-cpp
 endif
 
 # GNU readline
@@ -483,7 +483,7 @@ ROSE_INCLUDES_WITHOUT_BOOST_ISYSTEM_PATH = \
      $(ROSE_PYTHON_INCLUDES) \
      $(ROSE_YICES_INCLUDES) \
      $(ROSE_Z3_INCLUDES) \
-     $(ROSE_YAML_INCLUDES) \
+     $(ROSE_YAMLCPP_INCLUDES) \
      $(ROSE_LIBPQXX_INCLUDES) \
      $(ROSE_CAPSTONE_INCLUDES) \
      $(ROSE_READLINE_INCLUDES) \
@@ -564,7 +564,7 @@ ROSE_LIBS = $(abspath $(top_builddir)/src/librose.la) -lm $(JAVA_JVM_LINK) \
   $(SQLITE3_LDFLAGS)  $(RT_LIBS) $(ROSE_YICES_LIBS_WITH_PATH) $(ROSE_Z3_LIBS_WITH_PATH) $(ROSE_PHP_LIBS_WITH_PATH) \
   $(ROSE_GUI_LIBS_WITH_PATH) $(ROSE_QT_LIBS_WITH_PATH) $(ROSE_SSL_LIBS) $(ROSE_ETHER_LIBS) \
   $(ROSE_INTEL_COMPILER_MATH_LIBS) $(ROSE_ATERM_LIBS) $(ROSE_FLANG_LIBS) \
-  $(ROSE_YAML_LIBS_WITH_PATH) $(ROSE_LIBMAGIC_LIBS_WITH_PATH) $(ROSE_READLINE_LIBS_WITH_PATH) \
+  $(ROSE_YAMLCPP_LIBS_WITH_PATH) $(ROSE_LIBMAGIC_LIBS_WITH_PATH) $(ROSE_READLINE_LIBS_WITH_PATH) \
   $(ROSE_DLIB_LIBS_WITH_PATH) $(ROSE_GCRYPT_LIBS_WITH_PATH) $(ROSE_LIBPQXX_LIBS_WITH_PATH) \
   $(ROSE_COBOL_PT_LIBS_WITH_PATH) $(ROSE_PYTHON_LIBS_WITH_PATH) \
   $(ROSE_QUAD_FLOAT_MATH) $(ROSE_CAPSTONE_LIBS_WITH_PATH)
