--- a/tup.config
+++ b/tup.config
@@ -256,7 +256,7 @@ CONFIG_WITH_TIFF=no
 # Web toolkit for developing GUIs in a web browser
 CONFIG_WITH_WT=no
 
-# YamlCPP is a YAML parser and emitter in C++
+# YAML-CPP is a YAML parser and emitter in C++
 # https://github.com/jbeder/yaml-cpp
 CONFIG_WITH_YAMLCPP=no
 
