(Support) Added mini-yaml to all three build systems
RPM-154

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -60,8 +60,8 @@ set(rose_util_src
   rose_getline.C
   processSupport.C
   rose_getline.C
-  rose_strtoull.C
-)
+  rose_strtoull.C)
+
 add_library(util_main OBJECT ${rose_util_src})
 add_dependencies(util_main generate_rosePublicConfig)
 
@@ -86,3 +86,5 @@ install(FILES
   Map.h Progress.h timing.h rose_constants.h rose_getline.h rose_strtoull.h
   roseTraceLib.c ParallelSort.h GraphUtility.h RecursionCounter.h rose_isnan.h rose_pragma_message.h
   DESTINATION ${INCLUDE_INSTALL_DIR})
+
+install(FILES mini-yaml/Yaml.h DESTINATION ${INCLUDE_INSTALL_DIR}/mini-yaml)
