(Support) Incorporated mini-yaml into ::Rose namespace
RPM-154
RPM-157

--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -22,7 +22,8 @@ add_library(roseNamespace OBJECT
   FormattedTable.C
   Initialize.C
   Progress.C
-  SourceLocation.C)
+  SourceLocation.C
+  Yaml.C)
 
 add_dependencies(roseNamespace rosetta_generated)
 
@@ -45,5 +46,6 @@ install(FILES
   RecursionCounter.h
   SourceLocation.h
   StringUtility.h
+  Yaml.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose)
