(Support) Added YAML parsing unit tests
RPM-154
RPM-157

--- a/tests/smoke/unit/Utility/Makefile.am
+++ b/tests/smoke/unit/Utility/Makefile.am
@@ -147,6 +147,20 @@ testBitOps.passed: $(top_srcdir)/scripts/test_exit_status testBitOps
 		CMD="./testBitOps"			\
 		$< $@
 
+########################################################################################################################
+# YAML parsing
+########################################################################################################################
+
+noinst_PROGRAMS += testYaml
+testYaml_SOURCES = testYaml.C
+
+TEST_TARGETS += testYaml.passed
+testYaml.passed: $(top_srcdir)/scripts/test_exit_status testYaml
+	@$(RTH_RUN)				\
+		TITLE="test YAML parsing [$@]"	\
+		CMD="./testYaml"		\
+		$< $@
+
 ###############################################################################################################################
 # Boilerplate
 ###############################################################################################################################
