(Feature) Further support for the CIL (.NET) infrastructure
This commit completes the first part of the support for .NET in
ROSE.  This gets the files in place that will be modified
to support the disassembler and other related infrastructure.

- Merge from branch dquinlan/dq-ldrd2-development-test

LDRD_SI-1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -319,6 +319,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/Disassembler.h						\
 	Rose/BinaryAnalysis/DisassemblerAarch32.h					\
 	Rose/BinaryAnalysis/DisassemblerAarch64.h					\
+	Rose/BinaryAnalysis/DisassemblerCil.h						\
 	Rose/BinaryAnalysis/DisassemblerJvm.h						\
 	Rose/BinaryAnalysis/DisassemblerM68k.h						\
 	Rose/BinaryAnalysis/DisassemblerMips.h						\
