--- a/src/Rose/BinaryAnalysis/Unparser/CMakeLists.txt
+++ b/src/Rose/BinaryAnalysis/Unparser/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(roseBinaryAnalysisUnparser OBJECT
   Aarch32.C
   Aarch64.C
   Base.C
+  Cil.C
   Jvm.C
   M68k.C
   Mips.C
@@ -17,6 +18,7 @@ install(FILES
   Aarch32.h
   Aarch64.h
   Base.h
+  Cil.h
   Jvm.h
   M68k.h
   Mips.h
