(Engineering) Removed things that have been deprecated a year or more
RPM-171

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -80,9 +80,8 @@ endif()
 
 ########### install files ###############
 install(FILES
-  BitFlags.h BitOps.h Color.h FileSystem.h FormatRestorer.h
   setup.h processSupport.h ROSE_ABORT.h ROSE_ASSERT.h rose_paths.h
   compilationFileDatabase.h LinearCongruentialGenerator.h
-  Map.h Progress.h timing.h rose_constants.h rose_getline.h rose_strtoull.h
-  roseTraceLib.c ParallelSort.h GraphUtility.h RecursionCounter.h rose_isnan.h rose_pragma_message.h
+  Map.h timing.h rose_getline.h rose_strtoull.h
+  roseTraceLib.c ParallelSort.h rose_isnan.h rose_pragma_message.h
   DESTINATION ${INCLUDE_INSTALL_DIR})
