--- a/src/util/stringSupport/CMakeLists.txt
+++ b/src/util/stringSupport/CMakeLists.txt
@@ -2,5 +2,5 @@ add_library(util_stringSupport OBJECT
   escape.C FileNameClassifier.C FileUtility.C)
 
 ########### install files ###############
-install(FILES  string_functions.h escape.h FileUtility.h StringUtility.h
+install(FILES escape.h FileUtility.h
         DESTINATION ${INCLUDE_INSTALL_DIR})
