--- a/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/C_tests/Makefile.am
@@ -634,7 +634,8 @@ TESTCODES_REQUIRED_TO_PASS = \
      test2021_15.c \
      test2021_16.c \
      test2021_17.c \
-     test2021_18.c 
+     test2021_18.c \
+     test2022_01.c 
 
 
 TESTCODE_CURRENTLY_FAILING = \
