fix cmake: status messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -559,7 +559,9 @@ if(enable-edg-frontend)
     set(BINARY_EDG 0)
     if(enable-c)
       set(BINARY_EDG 1)
-      if(NOT WIN32)
+      if(WIN32)
+        message(FATAL_ERROR "EDG binary release is not available for Windows")
+      else()
         if(EXISTS "${PROJECT_BINARY_DIR}/src/frontend/CxxFrontend/EDG.tar.gz")
           message(STATUS "EDG - unpacking EDG binary tar file")
           execute_process(COMMAND "mkdir" "-p" "${PROJECT_BINARY_DIR}/src/frontend/CxxFrontend/EDG" COMMAND_ECHO STDOUT COMMAND_ERROR_IS_FATAL ANY)
@@ -586,7 +588,7 @@ if(enable-edg-frontend)
   if(have_EDG_source)
     message(STATUS "EDG - will compile EDG-${EDG_VERSION} source code")
   elseif(BINARY_EDG)
-    message(STATUS "EDG - will use EDG-${EDG_VERSION} binary release (download)")
+    message(STATUS "EDG - will use EDG-${EDG_VERSION} binary release")
   else()
     message(STATUS "EDG - not needed; using a nearly empty dummy library")
   endif()
